    (Eric Payne via jeagles)

    YARN-4452. NPE when submit Unmanaged application. (Naganarasimha G R via
    junping_du)

    YARN-3655. FairScheduler: potential livelock due to maxAMShare limitation
    and container reservation. (Zhihai Xu via kasha)

    YARN-3762. FairScheduler: CME on FSParentQueue#getQueueUserAclInfo. (kasha)

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    YARN-3793. Several NPEs when deleting local files on NM recovery (Varun
    Saxena via jlowe)

    YARN-3990. AsyncDispatcher may overloaded with RMAppNodeUpdateEvent when
    Node is connected/disconnected (Bibin A Chundatt via jlowe)

    YARN-3857: Memory leak in ResourceManager with SIMPLE mode.
    (mujunchao via zxu)

    YARN-3697. FairScheduler: ContinuousSchedulingThread can fail to shutdown.
    (Zhihai Xu via kasha)

    YARN-3535. Scheduler must re-request container resources when RMContainer transitions
    from ALLOCATED to KILLED. (rohithsharma and peng.zhang via asuresh)

    YARN-4180. AMLauncher does not retry on failures when talking to NM.
    (adhoot)

    YARN-2902. Killing a container that is localizing can orphan resources in
    the DOWNLOADING state (Varun Saxena via jlowe)

    YARN-4354. Public resource localization fails with NPE. (Jason Lowe via
    junping_du)

    YARN-3619. ContainerMetrics unregisters during getMetrics and leads to
    ConcurrentModificationException (Zhihai Xu via jlowe)

    YARN-3878. AsyncDispatcher can hang while stopping if it is configured for
    draining events on stop. (Varun Saxena via jianhe)

    YARN-3351. AppMaster tracking URL is broken in HA. (Anubhav Dhoot via kasha)

    YARN-4047. ClientRMService getApplications has high scheduler lock contention.
    (Jason Lowe via jianhe)

    YARN-4424. Fix deadlock in RMAppImpl. (Jian he via wangda)

    YARN-4041. Slow delegation token renewal can severely prolong RM recovery. Contributed by Sunil G
